web and request update